[metadata]
name = gcnuBridging2023
version = 1.0.0
description = Repository for the 2023 edition of the GCNU Mathematics Bridgning Program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/gcnuBridging2023
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
package_dir = 
     = src
packages = find:
install_requires = 
    numpy
    plotly
